Security hardening, code cleanup, and documentation overhaul (P0-P3)
P0 Critical Security:
- Remove hardcoded credentials from source, require env vars
- Add RBAC with USER/ADMIN roles, protect /admin/** endpoints
- Migrate JWT from localStorage to httpOnly cookies with SameSite
- Delete legacy FirebaseAuthFilter, guard dev endpoints
- Add CSRF protection via double-submit cookie pattern

P1 High Priority:
- Fix production API URL bug, centralize config.ts
- Add database indexes on frequently queried columns
- Fix N+1 queries with JPA EntityGraph
- Add security headers to netlify.toml

P2 Medium Priority:
- Archive legacy vanilla JS frontend to _archive_frontend_legacy/
- Remove dead code (feedbackMap, ProtectedRoute, deprecated methods, orphan files)
- Config-driven CORS using frontend.url + cors.extra-origins
- Set ddl-auto=validate in production (safe schema validation)
- Add input validation (@Valid, @NotNull, @Min/@Max) to DTOs and controllers
- Fix CSS variable naming (--bg-secondary -> --color-bg-secondary)
- Add Firestore security rules with data validation

P3 Low Priority:
- Rewrite README, PROJECT_INSTRUCTIONS, TODO for React frontend
- Delete 12 obsolete scripts (database, build, git)
- Add husky + lint-staged pre-commit hooks with secret scanning
- Add loading="lazy" to game card images
- Update action plan checklist (22/30 complete)

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ commit-message.txt
 # Firebase credentials (NEVER commit)
 firebase-service-account.json
 *-firebase-adminsdk-*.json
+
+# Environment files with secrets
+.env.local
+*.env.local
+backend/.env.local
