--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Explicitly set dialect for Railway
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:validate}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
@@ -33,6 +33,9 @@ steam.realm=${STEAM_REALM:https://lutemprototype-production.up.railway.app}
 
 # Frontend URL for redirects
 frontend.url=${FRONTEND_URL:https://lutembeta.netlify.app}
+
+# CORS: additional allowed origins (comma-separated)
+cors.extra-origins=${CORS_EXTRA_ORIGINS:https://lutem.3lands.ch,https://lutemweb.netlify.app}
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:}
