--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,13 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    Content-Security-Policy = "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https://cdn.cloudflare.steamstatic.com https://avatars.steamstatic.com https://*.googleusercontent.com data:; connect-src 'self' https://lutemprototype-production.up.railway.app https://*.firebaseio.com https://*.googleapis.com; font-src 'self'; frame-ancestors 'none'"
