--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,7 +15,18 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 # Connection pool settings
-spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL:10}
+spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE:2}
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+
+# Graceful shutdown
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=30s
+
+# Health endpoint
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
 
 # Reduce logging for production
 logging.level.org.hibernate=WARN
