--- a/netlify.toml
+++ b/netlify.toml
@@ -16,4 +16,5 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "camera=(), microphone=(), geolocation=()"
-    Content-Security-Policy = "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https://cdn.cloudflare.steamstatic.com https://avatars.steamstatic.com https://*.googleusercontent.com data:; connect-src 'self' https://lutemprototype-production.up.railway.app https://*.firebaseio.com https://*.googleapis.com; font-src 'self'; frame-ancestors 'none'"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains"
+    Content-Security-Policy = "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https://cdn.cloudflare.steamstatic.com https://avatars.steamstatic.com https://lh3.googleusercontent.com data:; connect-src 'self' https://lutemprototype-production.up.railway.app https://*.firebaseio.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com; font-src 'self'; form-action 'self'; base-uri 'self'; frame-ancestors 'none'"
