Security and quality improvements: server-side unlock validation, race condition fix, cookie hardening, code deduplication
- Move AI import unlock code validation from client to server (new /api/steam/ai-import endpoint)
- Fix Steam import race condition with DataIntegrityViolationException catch
- Fix GameSession legacyUserId null for Steam users (use user ID instead of googleId)
- Make cookie Secure flag conditional on environment (HTTP localhost vs HTTPS prod)
- Deduplicate getCsrfToken into shared csrf.ts module
- Extract RequestUtils.java for shared getCurrentUser logic
- Add React.memo to GameCard/AlternativeCard components
- Add input validation bounds (search query length, page/size params)
- Remove unused LoadingStep component and console.logs
- Fix hardcoded paths in bat scripts

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -59,6 +59,9 @@ anthropic.model=${ANTHROPIC_MODEL:claude-haiku-4-5-20251001}
 # Development mode (disables dev endpoints in production)
 lutem.dev-mode=${LUTEM_DEV_MODE:false}
 
+# AI import unlock code (for donation-gated features)
+lutem.ai-import.unlock-code=${AI_IMPORT_UNLOCK_CODE:}
+
 # Rate limiting configuration
 lutem.rate-limit.enabled=${RATE_LIMIT_ENABLED:true}
 lutem.rate-limit.requests-per-minute=${RATE_LIMIT_RPM:60}
